# raylibGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  DebugGame  DebugGame.exe.lnk  README.md  vcpkg.json
include/: Atlas.h  Ball.h  Entity.h  Fruit.h  Game.h  GameMap.h  Random.h  Snake.h  TileSet.h  Vec2.h
src/: Atlas.cpp  Ball.cpp  Entity.cpp  Fruit.cpp  Game.cpp  GameMap.cpp  Snake.cpp  TileSet.cpp  Vec2.cpp  main.cpp
